manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "akscluster-8789"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "akscluster-8789"
  template:
    metadata:
      labels:
        app: "akscluster-8789"
    spec:
      containers:
        - name: "akscluster-8789"
          image: "akscheckcontainerregistry.azurecr.io/akscluster"
          ports:
          - containerPort: 6379
