manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "akscluster-7fa7"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "akscluster-7fa7"
  template:
    metadata:
      labels:
        app: "akscluster-7fa7"
    spec:
      containers:
        - name: "akscluster-7fa7"
          image: "akscheckcontainerregistry.azurecr.io/akscluster"
          ports:
          - containerPort: 6379
