manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "akscluster-8789"
    labels:
        app: "akscluster-8789"
spec:
    type: ClusterIP
    ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: http
    selector:
        app: "akscluster-8789"
