manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "akscluster-7fa7"
    labels:
        app: "akscluster-7fa7"
spec:
    type: ClusterIP
    ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: http
    selector:
        app: "akscluster-7fa7"
