manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "akscluster-7fa7"
    labels:
        app: "akscluster-7fa7"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: aksclusternamespace-akscluster-7fa7.e9a628fe52b14d5592ab.southeastasia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "akscluster-7fa7"
                servicePort: 6379
